--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "2.0.0",
     "@tensorflow/tfjs-react-native": "0.3.0",
+    "base64-arraybuffer": "^0.2.0",
+    "buffer": "^5.6.0",
     "expo-camera": "^7.0.0",
     "expo-gl": "^7.0.0",
     "expo-gl-cpp": "^7.0.0",
     "expo-image-manipulator": "^6.0.0",
     "jasmine-core": "^3.4.0",
-    "jpeg-js": "^0.3.5",
+    "jpeg-js": "^0.4.2",
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-native-fs": "2.14.1",
